@@ -9784,60 +9784,45 @@ function(x)
 {
     out <- NULL
 
-    ## /data/rsync/PKGS/geoR/man/globalvar.Rd
+    ## prompt[Data]():
     s <- .Rd_get_section(x, "title")
     if(length(s)) {
         s <- .Rd_deparse(s, tag = FALSE)
-        if(trimws(s) == "~~function to do ... ~~")
+        ## FIXME: some start with "~~ ", see FIXME in methods::promptMethods
+        if(startsWith(trimws(s), "A Capitalized Title"))
             out <- rbind(out, c("\\title", s))
     }
-    s <- .Rd_get_section(x, "description")
-    if(length(s)) {
-        s <- .Rd_deparse(s, tag = FALSE)
-        if(trimws(s) ==
-           "~~ A concise (1-5 lines) description of what the function does. ~~")
-            out <- rbind(out, c("\\description", s))
-    }
+
+    ## promptPackage(): (catch some dummy texts generated by R < 4.4.0)
     s <- .Rd_get_section(x, "details")
+    if(length(s) &&
+       any(grepl("~~ An overview of how to use the package",
+                 unlist(s[RdTags(s) == "TEXT"]), fixed = TRUE)))
+        out <- rbind(out, c("\\details", .Rd_deparse(s, tag = FALSE)))
+    s <- .Rd_get_section(x, "references")
+    if(length(s) &&
+       any(trimws(unlist(s[RdTags(s) == "TEXT"])) ==
+           "~~ Literature or other references for background information ~~"))
+        out <- rbind(out, c("\\references", .Rd_deparse(s, tag = FALSE)))
+    ## the following two also match Rcpp's manual-page-stub.Rd skeleton
+    s <- .Rd_get_section(x, "seealso")
     if(length(s)) {
-        s <- .Rd_deparse(s, tag = FALSE)
-        if(trimws(s) ==
-           "~~ If necessary, more details than the description above ~~")
-            out <- rbind(out, c("\\details", s))
+        s <- .Rd_deparse(.Rd_drop_comments(s), tag = FALSE)
+        if(grepl("Optional links to other man pages",
+                 s, fixed = TRUE))
+            out <- rbind(out, c("\\seealso", s))
+    }
+    s <- .Rd_get_section(x, "examples")
+    if(length(s)) {
+        s <- .Rd_deparse(.Rd_drop_comments(s), tag = FALSE)
+        if(grepl("Optional simple examples of the most important functions",
+                 s, fixed = TRUE))
+            out <- rbind(out, c("\\examples", s))
     }
 
-    ## /data/rsync/PKGS/mimR/man/plot.Rd:\author{ ~~who you are~~ }
-    s <- .Rd_get_section(x, "author")
-    if(length(s)) {
-        s <- .Rd_deparse(s, tag = FALSE)
-        if(trimws(s) == "~~who you are~~")
-            out <- rbind(out, c("\\author", s))
-    }
-    ## /data/rsync/PKGS/mimR/man/mim-class.Rd:\note{ ~~further notes~~ }
-    s <- .Rd_get_section(x, "note")
-    if(length(s)) {
-        s <- .Rd_deparse(s, tag = FALSE)
-        if(trimws(s) == "~~further notes~~")
-            out <- rbind(out, c("\\note", s))
-    }
-
-    tab <- .Rd_get_argument_table(x)
-    if(length(tab)) {
-        ## /data/rsync/PKGS/Rmpfr/man/mpfrArray.Rd:
-        ##   \item{precBits}{ ~~Describe \code{precBits} here~~ }
-        descriptions <- trimws(tab[, 2L])
-        ind <- (descriptions ==
-                sprintf("~~Describe \\code{%s} here~~", tab[, 1L]))
-        if(any(ind))
-            out <- rbind(out,
-                         cbind(sprintf("\\arguments, description of item '%s'",
-                                       tab[ind, 1L]),
-                               tab[ind, 2L]))
-    }
-
-    ## <NOTE>
-    ## Obviously, auto-generation does too much here, so maybe do not
-    ## include these in production check code ...
+    ## promptMethods():
+    ## <FIXME>
+    ## r50996 changed to produce commented descriptions, so this is obsolete
     tab <- .Rd_get_methods_description_table(x)
     if(length(tab)) {
         descriptions <- trimws(tab[, 2L])
@@ -9849,7 +9834,7 @@ function(x)
                                        tab[ind, 1L]),
                                tab[ind, 2L]))
     }
-    ## </NOTE>
+    ## </FIXME>
 
     if(config_val_to_logical(Sys.getenv("_R_CHECK_RD_CONTENTS_KEYWORDS_",
                                         "FALSE"))) {
