@@ -1,7 +1,7 @@
 #  File src/library/utils/R/prompt.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2019 The R Core Team
+#  Copyright (C) 1995-2023 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -104,7 +104,10 @@ function(object, filename = NULL, name = NULL,
              aliases = c(paste0("\\alias{", name, "}"),
              paste("%- Also NEED an '\\alias' for EACH other topic",
                    "documented here.")),
-             title = "\\title{\n%%  ~~function to do ... ~~\n}",
+             title = c("\\title{", # cannot build if commented, also avoid "~~"
+                       ## keep in sync with tools:::.Rd_get_offending_autogenerated_content
+                       "A Capitalized Title (ideally limited to 65 characters)",
+                       "}"),
              description = c("\\description{",
              paste("%%  ~~ A concise (1-5 lines) description of what",
                    "the function does. ~~"),
@@ -137,7 +140,7 @@ function(object, filename = NULL, name = NULL,
              examples = c("\\examples{",
              "##---- Should be DIRECTLY executable !! ----",
              "##-- ==>  Define data, use random,",
-             "##--	or do  help(data=index)  for the standard data sets.",
+             "##--	or standard data sets, see data().",
              "",
              "## The function is currently defined as",
              x.def,
@@ -286,7 +289,10 @@ function(object, filename = NULL, name = NULL)
 #             version = "\\Rdversion{1.1}",
              aliases = paste0("\\alias{", name, "}"),
              docType = "\\docType{data}",
-             title = "\\title{\n%%   ~~ data name/kind ... ~~\n}",
+             title = c("\\title{",
+                       ## keep in sync with tools:::.Rd_get_offending_autogenerated_content
+                       "A Capitalized Title for the Data Set",
+                       "}"),
              description = c("\\description{",
              "%%  ~~ A concise (1-5 lines) description of the dataset. ~~",
              "}"),
@@ -333,7 +339,7 @@ function(package, lib.loc = NULL, filename = NULL, name = NULL, final = FALSE)
     	prev <- Rdtxt[[field]]
     	Rdtxt[[field]] <<- c(prev[-length(prev)], new, prev[length(prev)])
     }
-    insert2 <- function(field, new) insert1(field, paste("~~", new, "~~"))
+    insert2 <- function(field, new) insert1(field, paste("%%  ~~", new, "~~"))
 
     if(missing(name))
 	name <- paste0(package, "-package")
@@ -353,7 +359,7 @@ function(package, lib.loc = NULL, filename = NULL, name = NULL, final = FALSE)
     	         author = c("\\author{","}"),
     	         references = character(0L),
 
-    	         keywords = c("\\keyword{ package }")
+    	         keywords = "\\keyword{package}"
     	     )
 
     insert1("title", paste0("\\packageTitle{", package,"}"))
@@ -365,11 +371,11 @@ function(package, lib.loc = NULL, filename = NULL, name = NULL, final = FALSE)
     insert1("details", paste0("\\packageIndices{", package, "}"))
 
     if (!final) {
-        insert2("details", strwrap(
-	 "An overview of how to use the package, including the most important functions"))
+        insert2("details", c("An overview of how to use the package,",
+                             "including the most important functions"))
         Rdtxt$references <-
             c("\\references{",
-              paste("~~",
+              paste("%%  ~~",
                     "Literature or other references for background information",
                     "~~"),
               "}")
@@ -377,11 +383,10 @@ function(package, lib.loc = NULL, filename = NULL, name = NULL, final = FALSE)
         insert2("seealso",
                 c("Optional links to other man pages, e.g.",
                   "\\code{\\link[<pkg>:<pkg>-package]{<pkg>}}"))
-        Rdtxt$examples <- c("\\examples{","}")
-        insert2("examples",
-                "simple examples of the most important functions")
-        insert2("keywords",
-                strwrap("Optionally other standard keywords, one per line, from file KEYWORDS in the R documentation directory"))
+        Rdtxt$examples <-
+            c("\\examples{",
+              "%%  ~~ Optional simple examples of the most important functions ~~",
+              "}")
     }
 
     if(is.na(filename)) return(Rdtxt)
