@@ -90,7 +90,7 @@ build.pkg("myTst")
 ## clean up any previous attempt (which might have left a 00LOCK)
 unlink("myLib", recursive = TRUE)
 dir.create("myLib")
-install.packages("myTst", lib = "myLib", repos=NULL, type = "source") # with warnings
+install.packages("myTst", lib = "myLib", repos=NULL, type = "source")
 print(installed.packages(lib.loc= "myLib", priority= "NA"))## (PR#13332)
 stopifnot(require("myTst",lib = "myLib"))
 sm <- findMethods(show, where= as.environment("package:myTst"))
@@ -105,7 +105,7 @@ stopifnot(exprs = {
     res[["foo-class"]]$missing_description  # was part of checkRd() in R < 4.4.0
     identical(res[["identity"]]$arguments_with_no_description, "x")
     ## R < 4.4.0 treated \n and Rd comments as sufficient content
-    ## FIXME: should also warn about auto-generated promptPackage() content
+    identical(res[["identity"]]$offending_autogenerated_content[,1], "\\title")
 })
 file.remove("man/identity.Rd")
 setwd(owd)
